# pure_pursuit

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  README.md  test_cases.txt
include/: pure_pursuit.h
scripts/: build.sh  clang-format-all.sh  cppcheck-all.sh  run_tests.sh
src/: main.cpp  pure_pursuit.cpp
tests/: pure_pursuit_tests.cpp  test.cpp
